tests/ui/modifier_definition/fail/second-arg-incorrect.stderr
error: Second argument of modifier must be body `Fn(& mut Contract) `, `FnMut(& mut Contract) ` or `FnOnce(& mut Contract) `
  --> tests/ui/modifier_definition/fail/second-arg-incorrect.rs:13:44
   |
13 |     fn once(instance: &mut Contract, body: Contract) {
   |                                            ^^^^^^^^
